Fix for bug 44627 "[mac]local files without .html extension are not loaded correctly". Changed logic for files of type TEXT without an extension to allow nsUnknownDecoder to parse data to determine MIME type.  r=gagan